--- a/index.html
+++ b/index.html
@@ -420,8 +420,7 @@
       </main>
       <footer class="footer">
         <div class="footer__container page__container page__container_type_footer"><a class="logo footer__logo" href="./"><img class="logo__img" src="./img/logo/logo.svg" alt="Логотип" loading="lazy"/></a>
-          <div class="footer__column footer__column_content_info">
-            <p class="footer__link footer__link_phone">+7 (999) 543-54-54</p>
+          <div class="footer__column footer__column_content_info"><a class="nav__item footer__link footer__link_phone" href="tel:+7(999)543-54-54">+7 (999) 543-54-54</a>
             <h3 class="footer__link">Мастерская</h3>
           </div>
           <div class="footer__column footer__column_content_catalog">
